--- a/content/styles/less/journey.challenge.less
+++ b/content/styles/less/journey.challenge.less
@@ -1,35 +1,34 @@
 @import (reference) "common.less";
-
 /****************************
  * Journey Challenge Screen
  ***************************/
 
 .journey-challenge {
     .breadcrumb {
-        color: @orange;
+        color: #FE5140;
         font-weight: bold;
         background-color: transparent;
         margin-bottom: 0px;
         .current-journey-name {
-            color: @darkgrey;
+            color: #a8a8a8;
         }
     }
     .challenge {
         margin: 10px 80px 10px 80px;
         padding: 5px;
-        background-color: @white;
+        background-color: white;
         -webkit-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
         box-shadow: 0px 4px 9px 0px rgba(0, 0, 0, 0.75);
         .ch-header {
             .ch-number {
-                color: @white;
+                color: white;
             }
             .ch-title {
                 margin-left: 15px;
             }
             .challenge-status {
-                color: @darkgrey;
+                color: #a8a8a8;
                 font-weight: bold;
                 margin-left: 8px;
             }
@@ -37,19 +36,19 @@
         .ch-body {
             margin-top: 5px;
             padding-top: 5px;
-            border-top: solid 1px @lightgrey;
+            border-top: solid 1px #e7e7e7;
             display: block;
             .body-actions {
                 text-align: center;
             }
             .contact {
-                background-color: @lightergrey;
+                background-color: #f0f0f0;
                 padding-top: 10px;
                 padding-bottom: 10px;
                 hr {
                     margin-top: 5px;
                     margin-bottom: 5px;
-                    border-top-color: @darkgrey;
+                    border-top-color: #a8a8a8;
                 }
                 .r-status {
                     font-weight: bold;
@@ -69,6 +68,12 @@
     }
     .actions {
         margin: 10px 80px 10px 80px;
+        .challenge-completed {
+            i {
+                color: #2DB2FF;
+                margin-right: 5px;
+            }
+        }
     }
 }
 
@@ -78,19 +83,31 @@
     text-align: center;
     margin-bottom: 10px;
 }
-/* Mobile adjustments */
 
-@media (max-width: @mobile_mediaquery_value) {
-    .journey-challenge .actions .previous,
-    .journey-challenge .actions .next {
-        display: none;
+.journey-challenge .actions .challenge-completed,
+.journey-challenge .actions .challenge-completed:hover {
+    background-color: #e7e7e7;
+    border-color: #e7e7e7;
+    cursor: default;
+}
+
+.provide-reason {
+    text-align: center;
+    button {
+        width: 150px;
     }
-    .journey-challenge {
-        .actions {
-            .change-status {
-                width: 99.5%;
-            }
+    .modal-header {
+        border-bottom-color: transparent;
+    }
+    .modal-body {
+        textarea {
+            width: 80%;
         }
+    }
+    .modal-footer {
+        border-top-color: transparent;
+        text-align: center;
+        margin-bottom: 15px;
     }
 }
 /* Tablet adjustments */
