Remove Map and Photos Section. Add Review Section

--- a/content/styles/less/journey.overview.less
+++ b/content/styles/less/journey.overview.less
@@ -176,6 +176,31 @@
 /* Mobile adjustments */
 
 @media (max-width: @mobile_mediaquery_value) {
+    .profile{
+        img{
+            width: 65px;
+            height: auto;
+        }
+    }
+    .customerReview{
+        font-size: 12px;
+    }
+    .customerReview{
+        img{
+            width: 15px;
+            height: auto;
+        }
+    }
+    .customerReview{
+        font-size: 12px;
+        float:left;
+    }
+    .customerReview{
+        img{
+            width: 15px;
+            height: auto;
+        }
+    }
     .journey-overview .food-type-overview .ft-progress,
     .journey-overview .food-type-overview .ft-description,
     .journey-overview .food-type-overview .ft-actions {
@@ -210,8 +235,8 @@
         height: 50px;
         line-height: 45px;
     }
-    .journey-overview-items .ft-item .fti-body .gallery,
-    .journey-overview-items .ft-item .fti-body .google-map {
+    .journey-overview-items .ft-item .fti-body .profile,
+    .journey-overview-items .ft-item .fti-body .customerReview {
         display: none;
     }
     .journey-overview-items .ft-item .fti-body .review,
