--- a/content/styles/less/journey.challenge.less
+++ b/content/styles/less/journey.challenge.less
@@ -2,7 +2,6 @@
 /****************************
  * Journey Challenge Screen
  ***************************/
-
 .journey-challenge {
     .breadcrumb {
         color: #FE5140;
@@ -59,6 +58,9 @@
                 .r-status.closed {
                     color: red;
                 }
+            }
+            .reviews{
+                margin:25px 0 50px 0;
             }
         }
     }
